--- a/Wii.html
+++ b/Wii.html
@@ -21,7 +21,7 @@
     <article class="">
       <h1>Wii </h1>
       <img src="Wii.jpg" alt="Wii Controller">
-      <h4> The Wii is the most nostalgic video game ever and the Wii controller is amazing! The Wii has the best game of all time which is of course... Wii Sports! It was created in 2006. This control is fun to play with because it can use motion. So if you wanted to do some Wii sports tennis, all you have to do is swing the control! </h4>
+      <h4> The Wii is the most nostalgic Console ever and the Wii controller is amazing! The Wii has the best Console of all time which is of course... Wii Sports! It was created in 2006. This control is fun to play with because it can use motion. So if you wanted to do some Wii sports tennis, all you have to do is swing the control! </h4>
     </article>
     </body>
     </html>
